--- a/App/App.csproj
+++ b/App/App.csproj
@@ -5,7 +5,12 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>SensorWatcher_Refactored</RootNamespace>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Commands.Content\Commands.Content.csproj" />
+      <ProjectReference Include="..\Commands\Commands.csproj" />
+      <ProjectReference Include="..\Task.FileStorage\Task.FileStorage.csproj" />
+    </ItemGroup>
 
 </Project>
