--- a/SensorWatcher_Original/SensorWatcher_Original.csproj
+++ b/SensorWatcher_Original/SensorWatcher_Original.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>SensorWatcher_Refactored</RootNamespace>
+        <OutputType>Exe</OutputType>
+        <RootNamespace>SensorExample</RootNamespace>
     </PropertyGroup>
 
 </Project>
