--- a/Task.FileStorage/Task.FileStorage.csproj
+++ b/Task.FileStorage/Task.FileStorage.csproj
@@ -1,11 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>SensorWatcher_Refactored</RootNamespace>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Tasks\Tasks.csproj" />
+    </ItemGroup>
 
 </Project>
